<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ratingBg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_gravity="center"
            />

        <com.willy.ratingbar.ScaleRatingBar
            xmlns:rb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ratingBar_indicator"
            rb:numStars="5"
            rb:starPadding="15"
            rb:drawableEmpty="@drawable/empty"
            rb:drawableFilled="@drawable/filled"
            style="@style/AppTheme.Hotel.Rating"
            android:clickable="false"
            android:focusable="false"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/title"
            style="@style/AppTheme.Hotel.Title"
            fontPath="@string/font_title"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/address"
            style="@style/AppTheme.Hotel.Label"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/distance"
            style="@style/AppTheme.Hotel.Label"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinates"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/coordinates"
            style="@style/AppTheme.Hotel.Label"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suits"
            android:textColor="@android:color/white"
            />
        <GridView
            android:id="@+id/suits"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:columnWidth="60dp"
            android:gravity="center"
            android:horizontalSpacing="5dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

</ScrollView>